--- a/src/globals.css
+++ b/src/globals.css
@@ -10,7 +10,7 @@
   }
 
   body {
-    @apply bg-white-1 text-white min-h-screen font-inter;
+    @apply bg-dark-1 text-white min-h-screen font-inter;
   }
 }
 
