--- a/src/globals.css
+++ b/src/globals.css
@@ -133,7 +133,7 @@
 
   /* Explore */
   .explore-container {
-    @apply flex flex-col flex-1 items-center overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
+    @apply flex flex-col flex-1 overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
   }
 
   .explore-inner_container {
