--- a/src/globals.css
+++ b/src/globals.css
@@ -331,6 +331,8 @@
   justify-content: center;
   align-items: center;
   margin-right: 10px;
+  flex-shrink: 0;
+  /* Prevent shrinking */
 }
 
 .month-initials {
