--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@media only screen and (max-width: 600px) {
+
+  /* Mobile-specific styles go here */
+  html {
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    height: 95%;
+  }
+}
+
 @layer base {
   * {
     @apply box-border list-none p-0 m-0 scroll-smooth;
