Expense Delete Functionality Added
Expense Delete Functionality Added and also add the confirmation box

--- a/src/globals.css
+++ b/src/globals.css
@@ -517,9 +517,10 @@ body.active-modal {
   line-height: 1.4;
   background: #535151;
   padding: 3px 12px;
-  border-radius: 3px;
+  margin: 5px;
+  border-radius: 5px;
   max-width: 600px;
-  min-width: 373px;
+  min-width: 280px;
 }
 
 .close-modal {
