--- a/src/globals.css
+++ b/src/globals.css
@@ -11,15 +11,14 @@
   }
 
   body {
+    @apply bg-white text-black transition-colors duration-300 min-h-screen font-["Inter",_sans-serif];
+  }
+
+  .dark body {
     background: #485563;
-    /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #29323c, #485563);
-    /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #29323c, #485563);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: white;
-    min-height: 80vh;
-    font-family: 'Inter', sans-serif;
+    @apply text-white;
   }
 }
 
